# tabula

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  post-create-root.sh
.githooks/: pre-push
.github/workflows/: ci.yml
crates/tabula-core/: Cargo.toml
crates/tabula-core/src/: delta.rs  lib.rs  schema.rs  validate.rs  world.rs
crates/tabula-core/tests/: properties.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  AUTH_SECURITY.md  DISTRIBUTION_ATPROTO_IPFS.md  FRONTEND_ARCHITECTURE.md  MAPS_TOKENS.md  OPERATIONS.md  PERSISTENCE_REPLAY.md  PLUGIN_BOUNDARY.md  PLUGIN_GENERATION.md  README.md  SESSIONS_REALTIME.md
kernel/: Cargo.toml
kernel/migrations/: 0001_init.sql
kernel/src/: authz.rs  config.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  observability.rs  ratelimit.rs  state.rs  store.rs
kernel/src/auth/: extractor.rs  jwt.rs
kernel/src/runtime/: host.rs  manifest.rs  mod.rs
kernel/src/session/: actor.rs  mod.rs  protocol.rs  ws.rs
kernel/tests/: runtime_counter.rs  session_e2e.rs  shadowdark_plugin.rs  store_db.rs
plugins/: build.sh
plugins/counter/: Cargo.toml
plugins/counter/src/: lib.rs
plugins/shadowdark/: Cargo.toml
plugins/shadowdark/src/: lib.rs
scripts/: test-all.sh
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.vue  main.js  style.css
web/src/components/: DiceRoller.vue  LoginPanel.vue  RollFeed.vue  SheetRenderer.vue
web/src/lib/: apiClient.js  fold.js  fold.test.js  supabase.js
web/src/router/: index.js
web/src/stores/: authStore.js  sessionStore.js
web/src/views/: HomeView.vue  SessionView.vue
wit/: tabula.wit
