[package]
name = "tabula-core"
version = "0.1.0"
edition = "2021"
description = "Tabula log core: closed delta vocabulary, world projection, schema registry"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
jsonschema = { version = "0.29", default-features = false }

[dev-dependencies]
proptest = "1"
