# Runtime test fixture: the smallest possible System plugin. Exercises every
# host import and every delta variant so the kernel's plugin loop can be tested
# without any real game rules.
[package]
name = "counter-plugin"
version = "0.1.0"
edition = "2021"

# Standalone workspace: plugins compile to wasm32-unknown-unknown and must not
# join the native workspace's feature unification.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
